# llmtrim

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  install.ps1  release.toml  server.json
.githooks/: pre-commit  pre-push
.github/workflows/: bench-gate.yml  ci.yml  publish-mcp-registry.yml  release-bindings.yml  release.yml
Formula/: llmtrim.rb
bench/: README.md
bench/results-caveman/: README.md
bench/scripts/: latency.rs  synth_toolout.py  vs_headroom.py
crates/adapters/llmtrim-gateway-plugin/: Cargo.toml  README.md
crates/adapters/llmtrim-gateway-plugin/src/: lib.rs
crates/llmtrim-cli/: Cargo.toml  README.md
crates/llmtrim-cli/bench/: BENCH_SPEC.md  README.md  pricing.json
crates/llmtrim-cli/bench/agent/: _tools.json  debug_large_logs.json  edit_and_test.json  research_qa.json  triage_and_fix.json
crates/llmtrim-cli/bench/scripts/: caveman_ab.py  requirements-vs-headroom.txt  synth_readme.py  synth_toolout.py  vs_headroom.py
crates/llmtrim-cli/bench/scripts/benchkit/: report.py
crates/llmtrim-cli/bench/snapshots/2026-06/: README.md  cache.json  cache__aggressive.json  cache__safe.json  cache__tuned.json  chat.json  chat__aggressive.json  chat__safe.json  cnn.json  cnn__aggressive.json  cnn__safe.json  dolly.json  dolly__aggressive.json  dolly__safe.json  glaive.json  glaive__aggressive.json  glaive__safe.json  gsm8k.json  gsm8k__aggressive.json  gsm8k__safe.json  hotpotqa.json  hotpotqa__aggressive.json  hotpotqa__safe.json  hotpotqa__tuned.json  humaneval.json  humaneval__aggressive.json  humaneval__safe.json  tl_ours.json  tl_rtk.json  toolout.json
crates/llmtrim-cli/bench/snapshots/named-benchmarks/: README.md
crates/llmtrim-cli/bench/snapshots/vs-caveman/: results.json
crates/llmtrim-cli/bench/snapshots/vs-entroly/: README.md  results.json
crates/llmtrim-cli/bench/snapshots/vs-headroom/: README.md  results.json
crates/llmtrim-cli/bench/snapshots/vs-leanctx/: README.md  results.json
crates/llmtrim-cli/src/: autostart.rs  compact.rs  daemon.rs  doctor.rs  ensure.rs  guard.rs  lib.rs  main.rs  mcp.rs  monitor.rs  quality.rs  serve.rs  setup.rs  statusline.rs  tracking.rs  update.rs  wrap.rs
crates/llmtrim-cli/src/bench/: agent.rs  mod.rs
crates/llmtrim-cli/src/breakdown/: app.rs
crates/llmtrim-cli/src/reroute/: auth.rs  codex.rs  continuation.rs  kimi.rs  mod.rs  sse.rs
crates/llmtrim-cli/tests/: mcp_protocol.rs
crates/llmtrim-core/: Cargo.toml  README.md
crates/llmtrim-core/data/: model_reasoning.json
crates/llmtrim-core/src/: capability.rs  config.rs  lib.rs  media.rs  tokenizer.rs
crates/llmtrim-core/src/provider/: mod.rs
crates/llmtrim-core/src/stages/: hygiene.rs  mod.rs  output.rs  retrieve.rs  tools.rs
crates/llmtrim-core/tests/: conformance.rs
crates/llmtrim-core/tests/conformance/: anthropic_agent_tool_result.json  anthropic_cache_frozen_prefix.json  openai_chat_basic.json
crates/llmtrim-ledger/: Cargo.toml
crates/llmtrim-ledger/src/: breakdown_db.rs  lib.rs  money.rs  tracking.rs
crates/llmtrim-tray/: Cargo.toml  README.md
crates/llmtrim-tray/src/: main.rs
crates/llmtrim-tray/src-ui/: styles.css
crates/llmtrim-uniffi/: Cargo.toml  README.md  pyproject.toml
crates/llmtrim-uniffi/packaging/ruby/: README.md  llmtrim.gemspec
crates/llmtrim-uniffi/packaging/ruby/lib/: llmtrim.rb
crates/llmtrim-uniffi/scripts/: build-gem.sh  build-wheel.sh  build-xcframework.sh
crates/llmtrim-uniffi/src/: lib.rs
crates/llmtrim-uniffi/tests/python/: test_llmtrim.py
crates/llmtrim-uniffi/tests/ruby/: test_llmtrim.rb
crates/llmtrim-wasm/: Cargo.toml  README.md  smoke.mjs
crates/llmtrim-wasm/src/: lib.rs
src/: autostart.rs  config.rs  lib.rs  main.rs  monitor.rs  pipeline.rs  quality.rs  serve.rs  setup.rs  tokenizer.rs  tracking.rs  update.rs
src/provider/: mod.rs
src/stages/: mod.rs  ngram.rs  ngram_sa.rs  output.rs  tools.rs
src/stages/toolout/: grep.rs  mod.rs  template.rs
tests/: quality.rs
tools/: gen_third_party_licenses.py  refresh_reasoning.py
tools/npm/: README.md  build_npm_packages.sh
