[package]
name = "llmtrim-uniffi"
description = "UniFFI bindings exposing the llmtrim-core compression engine to Python, Ruby, Swift and Kotlin."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish = false

[lib]
name = "llmtrim_ffi"
# cdylib: the loadable native module the bindings dlopen. staticlib: required for iOS/Swift.
crate-type = ["cdylib", "staticlib"]

# `uniffi-bindgen` CLI for this crate — invoked in library mode against the built cdylib
# to emit the Python/Ruby/Swift/Kotlin glue. See README for the generate commands.
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
llmtrim-core = { path = "../llmtrim-core" }
uniffi = { version = "0.31", features = ["cli"] }

[dev-dependencies]
serde_json = "1.0.150"

# UniFFI's generated scaffolding contains the FFI `unsafe` blocks, so this crate cannot
# inherit the workspace's `unsafe_code = "forbid"`. Warnings still deny.
[lints.rust]
warnings = "deny"
